--- a/jamort/src/variables.css
+++ b/jamort/src/variables.css
@@ -1,25 +1,80 @@
 /* variables.css */
+:root {
+/* Font Typography */
+--default-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Helvetica, Arial, 'Hiragino Sans GB', 'PingFang SC', 'Microsoft YaHei UI', 'Microsoft YaHei', 'Source Han Sans CN', sans-serif;
+--font-family-heading: Arimo Hebrew Subset, var(--default-font-family);
+--font-family-body: Abril Fatface, var(--default-font-family);
+
 
 /* Colors */
-:root {
-  --primary-color: #007bff;
-  --secondary-color: #6c757d;
-  --background-color: #f8f9fa;
-  --text-color: #343a40;
-  --color: var(--text-color);
-}
+  --primary-color: #240076;
+  --secondary-color: #00451a;
+  --backgroung-color: #f5f5f5;
+  --text-primary-color: #000000;
+  --text-secondary-color: #ffffff;
+  --text-secondary-color-purple: #240076;
+  --text-accent-color: #00451A;
+  --border-color: #240076;
 
-/* Typography */
-:root {
-  --font-family: 'Roboto', sans-serif;
-  --font-size-base: 16px;
+
+/* Font sizes */
+  --font-size-small: 16px;
+  --font-size-medium: 18px;
   --font-size-large: 24px;
-  --font-size-small: 12px;
-}
+
+/* Font weight */
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+
+/* Line height */
+  --line-height-default: 24px;
+
+/* Border radius */
+  --border-radius-small: 10px;
+  --border-radius-large: 45px;
+
+/* padding */
+  --padding-small: 10px;
+  --padding-medium: 20px;
+  --padding-large: 30px;
 
 /* Spacing */
-:root {
   --spacing-small: 8px;
   --spacing-medium: 16px;
   --spacing-large: 24px;
+}
+
+/* reusable components */
+/* Button */
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--font-family-heading);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-bold);
+  color: var(--text-secondary-color);
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: var(--border-radius-small);
+  padding: var(--padding-small) var(--padding-medium);
+  cursor: pointer;
+}
+
+/* Button: hover */
+.button:hover {
+  background-color: var(--secondary-color);
+}
+
+.button-primary {
+  background-color: var(--primary-color);
+  color: var(--text-secondary-color);
+}
+
+.button-secondary {
+  background-color: var(--secondary-color);
+  color: var(--text-secondary-color-purple);
+  border: 1px solid var(--border-color)
 }
